--- a/pages/order/markDealRefunded.html
+++ b/pages/order/markDealRefunded.html
@@ -77,6 +77,34 @@
             </div>
         </div>
 </span>
+        <span id="refunded_info_div">
+        <div class="site-title">
+            <fieldset>
+                <legend><a name="ignore">退货信息</a></legend>
+            </fieldset>
+        </div>
+        <div class="layui-form-item">
+           <div class="layui-inline">
+            <label class="layui-form-label">快递</label>
+            <div class="layui-input-inline">
+                <input id="user_refunded_info_user_express" type="text" class="layui-input " readonly>
+            </div>
+        </div>
+
+            <div class="layui-inline">
+            <label class="layui-form-label">快递单号</label>
+            <div class="layui-input-inline">
+                <input id="user_refunded_info_user_express_id" type="text" class="layui-input " readonly>
+            </div>
+        </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">退货备注</label>
+            <div class="layui-input-block">
+                <input id="user_refunded_info_remark" class="layui-input " readonly>
+            </div>
+        </div>
+            </span>
         <span id="span_refunded" >
         <div class="site-title">
             <fieldset>
