--- a/pages/goods/GoodsAdd.html
+++ b/pages/goods/GoodsAdd.html
@@ -118,7 +118,8 @@
         <div class="layui-form-item">
             <div class="layui-input-block">
                 <button class="layui-btn" lay-submit="" lay-filter="add">立即提交</button>
-                <button id="reset" type="reset" class="layui-btn layui-btn-primary">重置</button>
+                <!--<button id="reset" type="reset" class="layui-btn layui-btn-primary">重置</button>-->
+                <button id="close" class="layui-btn layui-btn-primary">关闭</button>
             </div>
         </div>
         <input type="hidden" name="hotelnum" value="0"/>
