--- a/pages/vip/vip_settingAdd.html
+++ b/pages/vip/vip_settingAdd.html
@@ -32,18 +32,18 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label"><span class="we-red">*</span>会员折扣</label>
+            <label class="layui-form-label"><span class="we-red">*</span>会员权重</label>
             <div class="layui-input-inline">
                 <input id="vip_weight" lay-verType="tips" type="number" name="vip_weight" lay-verify="required"
-                       placeholder="会员折扣" autocomplete="off" class="layui-input ">
+                       placeholder="会员权重" autocomplete="off" class="layui-input ">
             </div>
         </div>
 
         <div class="layui-form-item">
-            <label class="layui-form-label"><span class="we-red">*</span>会员折扣</label>
+            <label class="layui-form-label"><span class="we-red">*</span>酒店折扣</label>
             <div class="layui-input-inline">
                 <input id="hotel_discount" lay-verType="tips" type="number" name="hotel_discount" lay-verify="required"
-                       placeholder="会员折扣" autocomplete="off" class="layui-input ">
+                       placeholder="酒店折扣" autocomplete="off" class="layui-input ">
             </div>
         </div>
 
