--- a/pages/order/marketOrderDetail.html
+++ b/pages/order/marketOrderDetail.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../../static/css/font.css">
     <link rel="stylesheet" href="../../static/css/weadmin.css">
     <script src="../../lib/layui/layui.js" charset="utf-8"></script>
+    <script src="../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
     <script src="marketOrderDetail.js" type="text/javascript" charset="utf-8"></script>
 
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
