--- a/pages/banner/banner/bannerList.html
+++ b/pages/banner/banner/bannerList.html
@@ -61,7 +61,7 @@
 <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
 <!--<script src="../../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>-->
 <script src="bannerList.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>
+<!--<script src="../../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>-->
 <script src="../../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-xs" lay-event="edit">查看/编辑</a>
