--- a/pages/order/hotel_DealApply.html
+++ b/pages/order/hotel_DealApply.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../../static/css/font.css">
     <link rel="stylesheet" href="../../static/css/weadmin.css">
     <script src="../../lib/layui/layui.js" charset="utf-8"></script>
-    <script src="marketDealApply.js" type="text/javascript" charset="utf-8"></script>
+    <script src="hotel_DealApply.js" type="text/javascript" charset="utf-8"></script>
 
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
@@ -30,7 +30,7 @@
             <div class="layui-input-block">
                 <input id="radio1" type="radio" lay-filter="order_status" name="order_status" title="拒绝退款" value="61"
                        checked/>
-                <input id="radio2" type="radio" lay-filter="order_status" name="order_status" title="同意退款" value="48"/>
+                <input id="radio2" type="radio" lay-filter="order_status" name="order_status" title="同意退款" value="50"/>
             </div>
         </div>
         <div class="layui-form-item" id="fail_reason_div">
@@ -39,42 +39,7 @@
                 <textarea id="fail_reason" name="fail_reason" class="layui-textarea" ></textarea>
             </div>
         </div>
-        <span id="span_rufund" class="layui-hide">
-<fieldset class="layui-elem-field layui-field-title">
-    <legend>填写退货信息</legend>
-</fieldset>
 
-
-<div class="layui-form-item">
-    <div class="layui-inline">
-        <label class="layui-form-label" style="margin-left: 20px">退款收货人</label>
-        <div class="layui-input-inline">
-            <input id="refunded_name" type="text" name="refunded_name"
-                   class="layui-input"
-            >
-        </div>
-    </div>
-    <div class="layui-inline">
-        <label class="layui-form-label" style="width:100px">退款联系电话</label>
-        <div class="layui-input-inline">
-            <input id="refunded_phone" type="tel" name="refunded_phone"
-                   class="layui-input">
-        </div>
-    </div>
-</div>
-<div class="layui-form-item">
-    <label class="layui-form-label" style="width:100px">退款收货地址</label>
-    <div class="layui-input-block" style="margin-left: 130px">
-        <input id="refunded_address" name="refunded_address" class="layui-input">
-    </div>
-</div>
-            <div class="layui-form-item">
-            <label class="layui-form-label">备注</label>
-            <div class="layui-input-block" style="margin-left: 130px">
-                <input id="remark" name="remark" class="layui-input ">
-            </div>
-        </div>
-</span>
 
         <div class="layui-form-item">
             <div class="layui-input-block" style="margin-left: 130px">
